--- a/index.html
+++ b/index.html
@@ -14,5 +14,22 @@
   </head>
   <body>
     <p>hey</p>
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Price</th>
+            </tr>
+
+        </thead>
+        <tbody>
+            <tr>
+                <td>Tablet</td>
+                <td>30$</td>
+            </tr>
+
+        </tbody>
+        
+    </table>
   </body>
 </html>
