added 2 pics of cat

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
                 <td>30$</td>
             </tr>
 
+            <br>
+            <div>
+                <img src="assets/cat.jpeg">
+                <img src="assets/kitten.jpeg">
+            </div>
         </tbody>
         
     </table>
