--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>"This is a h1 Header"</h1>
     <p>hey</p>
     <table class="table table-striped">
         <thead>
