--- a/index.html
+++ b/index.html
@@ -15,21 +15,20 @@
   <body>
     <p>hey</p>
     <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Price</th>
-            </tr>
-
-        </thead>
-        <tbody>
-            <tr>
-                <td>Tablet</td>
-                <td>30$</td>
-            </tr>
-
-        </tbody>
-        
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Price</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Tablet</td>
+          <td>30$</td>
+        </tr>
+      </tbody>
     </table>
+
+    <footer>Copyright 2025</footer>
   </body>
 </html>
